objects/SVMX_PS_ES_Template_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will store all email templates per record type required for emailing the service report</description>
    <label>Email Template Settings</label>
    <fields>
        <fullName>SVMX_PS_ES_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field defines if the Org Wide Address is default and can be used for any object for which no org wide address is found</description>
        <inlineHelpText>This field defines if the Org Wide Address is default and can be used for any object for which no org wide address is found</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_ES_Object_API_Name__c</fullName>
        <description>This field carries the Object API Name</description>
        <inlineHelpText>This field carries the Object API Name</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_ES_Record_Type_Name__c</fullName>
        <description>This field carries the name of record type</description>
        <inlineHelpText>This field carries the name of record type</inlineHelpText>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_ES_Service_Report_Name__c</fullName>
        <description>This field specifies service report name where the templates need to be used</description>
        <inlineHelpText>This field specifies service report name where the templates need to be used</inlineHelpText>
        <label>Service Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_ES_Template_Unique_Name__c</fullName>
        <description>This field carries the name of Template to be used while sending email</description>
        <inlineHelpText>This field carries the name of Template to be used while sending email</inlineHelpText>
        <label>Template Unique Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>